fixed h1 and button spacing in index

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -67,16 +67,10 @@ footer {
 /*                          Index */
 /* ============================================================================================ */
 
-#collection-btn {
-    background-color: whitesmoke;
-    color: rgb(30,230,140);
-    border-radius: 40px;
-    width: 200px;
-}
-
 #collection-btn-container {
     position: relative;
     min-height: 100%;
+    width: 100%;
 }
 
 #collection-btn-content {
@@ -88,11 +82,11 @@ footer {
     transform: translateY(-50%);
 }
 
-#add-collection {
-    position: absolute;
+#collection-btn {
+    background-color: whitesmoke;
+    color: rgb(30,230,140);
+    border-radius: 40px;
     width: 100%;
-    margin: 0;
-    top: 30%;
 }
 
 /* ============================================================================================ */
@@ -172,6 +166,17 @@ textarea {
 /*                          @media */
 /* ============================================================================================ */
 
+/* @media (max-width: 883px) {
+    #add-collection {
+        font-size: calc(1.525rem + 3.3vw);
+    }
+
+    #collection-btn {
+        font-size: smaller;
+        margin-top: 4rem;
+    }
+} */
+
 @media (max-width: 768px) {
     #body-homepage {
         min-height: 50vh;
@@ -193,4 +198,7 @@ textarea {
     footer {
         margin-bottom: 0;
     }
+
+
 }
+
